--- a/Angular/appTiempo/src/app/components/weather/weather.component.html
+++ b/Angular/appTiempo/src/app/components/weather/weather.component.html
@@ -1,44 +1,60 @@
 <div class="container text-center">
-    <h1>Tiempo en {{city}}</h1>
+    <h1 class="mb-4">Tiempo en {{city || 'tu ciudad'}}</h1>
     
-    <div class="mt-4 mb-4">
-      <input 
-        [(ngModel)]="city" 
-        (keyup.enter)="getWeather(city)" 
-        class="form-control"
-        placeholder="Elige una ciudad..."
-        style="width: 300px; margin: 0 auto;">
+    <div class="mb-4">
+      <div class="input-group" style="max-width: 400px; margin: 0 auto;">
+        <input 
+          [(ngModel)]="city" 
+          (keyup.enter)="getWeather(city)" 
+          class="form-control"
+          placeholder="Elige una ciudad..."
+          aria-label="Ciudad"
+          aria-describedby="button-addon2">
+        <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="getWeather(city)">
+          <i class="fas fa-search"></i> Buscar
+        </button>
+      </div>
     </div>
 
-    <p class="card-text">
-        <img [src]="'https://openweathermap.org/img/wn/' + weatherData.weather[0].icon + '@2x.png'" />
-        {{ weatherData.weather[0].description }}
-      </p>
-      
-
-    <div *ngIf="loading" class="text-center">
-      <div class="spinner-border" role="status">
+    <div *ngIf="loading" class="text-center mb-4">
+      <div class="spinner-border text-primary" role="status">
         <span class="visually-hidden">Cargando...</span>
       </div>
     </div>
 
-    <div *ngIf="weatherData">
-        <canvas baseChart
-          [data]="lineChartData"
-          [options]="lineChartOptions"
-          [legend]="lineChartLegend"
-          chartType="line">
-        </canvas>
+    <div *ngIf="weatherData" [@fadeInOut] class="row">
+      <div class="col-md-6 mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">{{ weatherData.name }}</h5>
+            <div class="d-flex justify-content-center align-items-center">
+              <img [src]="'https://openweathermap.org/img/wn/' + weatherData.weather[0].icon + '@2x.png'" alt="Icono del tiempo" class="me-3" />
+              <div>
+                <h2 class="mb-0">{{ weatherData.main.temp | number:'1.0-0' }}°C</h2>
+                <p>{{ weatherData.weather[0].description | titlecase }}</p>
+              </div>
+            </div>
+            <ul class="list-group list-group-flush mt-3">
+              <li class="list-group-item">Humedad: {{ weatherData.main.humidity }}%</li>
+              <li class="list-group-item">Viento: {{ weatherData.wind.speed }} m/s</li>
+              <li class="list-group-item">Presión: {{ weatherData.main.pressure }} hPa</li>
+            </ul>
+          </div>
+        </div>
       </div>
       
-    
-    <div *ngIf="weatherData" class="card mx-auto mt-4" style="width: 18rem;" [@fadeInOut]>
-      <div class="card-body">
-        <h5 class="card-title">{{ weatherData.name }}</h5>
-        <p class="card-text">Temperature: {{ weatherData.main.temp }} °C</p>
-        <p class="card-text">Weather: {{ weatherData.weather[0].description }}</p>
-        <p class="card-text">Humidity: {{ weatherData.main.humidity }}%</p>
-        <p class="card-text">Wind: {{ weatherData.wind.speed }} m/s</p>
+      <div *ngIf="weatherData && esBrowser" class="col-md-6 mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Pronóstico de temperatura</h5>
+            <canvas baseChart
+              [data]="lineChartData"
+              [options]="lineChartOptions"
+              [legend]="lineChartLegend"
+              chartType="line">
+            </canvas>
+          </div>
+        </div>
       </div>
     </div>
   </div>
