--- a/Angular/appTiempo/src/app/components/weather/weather.component.html
+++ b/Angular/appTiempo/src/app/components/weather/weather.component.html
@@ -16,11 +16,11 @@
       </div>
     </div>
 
-    <!-- <div *ngIf="loading" class="text-center mb-4">
+     <div *ngIf="loading" class="text-center mb-4">
       <div class="spinner-border text-primary" role="status">
         <span class="visually-hidden">Cargando...</span>
       </div>
-    </div> -->
+    </div> 
 
     <div *ngIf="weatherData" [@fadeInOut] class="row">
       <div class="col-md-6 col-lg-4 mb-4">
